--- a/jsCRUD/index.html
+++ b/jsCRUD/index.html
@@ -4,34 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>html CRUD with pure js</title>
+    <title>data</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+             
+        </ul>
+    </nav>
     <table>
         <tr>
             <td>
-                <form onsubmit="event.preventDefault();onFormSubmit();" action="" autocomplete="off">
-                    <div >
-                        <label for="fullName">Full Name:</label><!--<label class="validation-error hide" id="nameValid">This field is required</label> -->
-                        <input type="text" name="fullName" id="fullName" required>
-                    </div>
-                    <div >
-                        <label for="empCode">Emp Code:</label>
-                        <input type="text" name="empCode" id="empCode" required>
-                    </div>
-                    <div >
-                        <label for="salary">Salary:</label>
-                        <input type="number" name="salary" id="salary" required>
-                    </div>
-                    <div >
-                        <label for="city">City:</label>
-                        <input type="text" name="city" id="city" required>
-                    </div>
-                    <div >
-                        <input type="submit" value="Submit" id="submit">
-                    </div>
-                </form>
+                
             </td>
             <td>
                 <table class = "list" id="employeeList">
