--- a/jsCRUD/home.html
+++ b/jsCRUD/home.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="index.html">show daat</a></li>
+                <li><a href="index.html">show data</a></li>
             </ul>
         </nav>
     </header>
@@ -20,7 +20,7 @@
         <table>
             <tr>
                 <td>
-                    <form onsubmit="event.preventDefault();onFormSubmit();" action="" autocomplete="off">
+                    <form action="index.html" onsubmit="onFormSubmit(event);"   autocomplete="on">
                         <div >
                             <label for="fullName">Full Name:</label><!--<label class="validation-error hide" id="nameValid">This field is required</label> -->
                             <input type="text" name="fullName" id="fullName" required>
